# vision_instruct_recipes

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements_cpu.txt  requirements_gpu.txt
.specify/memory/: constitution.md
configs/: config.yaml
configs/data/: default.yaml
configs/experiment/: cloud_gpu_scale.yaml  cloud_tpu_scale.yaml  local_lite.yaml  t4_qlora.yaml
configs/hydra/: default.yaml
configs/model/: default.yaml
configs/training/: default.yaml
docs/: api_reference.md  getting_started.md  index.md  inference.md  technical_architecture.md  train_cpu.md  train_gpu.md  troubleshooting.md
scripts/: demo.py  download_models.py  prepare_subset.py  train.py  train_cloud.sh  train_local.sh
src/data/: collator.py  dataset.py  entities.py
src/models/: encoder.py  inference.py  llava_arch.py  projector.py
src/training/: callbacks.py  trainer.py
src/utils/: config_schema.py  logging.py
tests/unit/: test_collator.py
